--- a/management/local.css
+++ b/management/local.css
@@ -44,9 +44,11 @@
 
 #resultsGrid {
     display              : grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 25% 24% 24% 24%;
     grid-template-rows   : auto auto;
     grid-template-areas  :
         "records  records  actions  actions"
         "queue  preview  preview  preview";
+    gap: 1%;
+    box-sizing: border-box;
 }
