--- a/management/local.css
+++ b/management/local.css
@@ -85,3 +85,14 @@
     padding: 1em;
     box-shadow: 0 0 200vw 200vw rgb(0 0 0 / 68%), 0 0 5em rgb(0 0 0);
 }
+
+.metadata dt {
+    float: left;
+    font-weight: bold;
+    width: 15em;
+}
+
+.alert {
+    color: crimson !important;
+    background-color: lightpink;
+}
