--- a/management/local.css
+++ b/management/local.css
@@ -39,6 +39,14 @@
     margin : 0.32em;
 }
 
+#preview button {
+    display: block;
+    cursor: pointer;
+    width  : auto;
+    padding: 0.68em;
+    margin : 0.32em;
+}
+
 #selectedRecordTitle{
     color: white;
     font-weight: 600;
