--- a/management/local.css
+++ b/management/local.css
@@ -30,12 +30,37 @@
 
 }
 
-.is-hidden{
-    display: none;
+#approveBtn, #returnBtn {
+    display: block;
+    cursor: pointer;
+    width  : 15em;
+    padding: 0.68em;
+    margin : 0.32em auto;
 }
 
-#actions button {
+#modBtns{
     display: block;
+    text-align: center;
+}
+#msgBtn{
+    display: inline-block;
+    cursor: pointer;
+    width  : 15em;
+    padding: 0.68em;
+    margin : 0.32em auto;
+}
+
+#moderationMsg{
+    margin: 0 auto;
+    margin-bottom: 2em;
+    padding: 1.25em;
+    display: block;
+    width: 75%;
+    height: 10em;
+}
+
+#msgCancelButton{
+    display: inline-block;
     cursor: pointer;
     width  : 15em;
     padding: 0.68em;
@@ -45,9 +70,9 @@
 #deleteBtn {
     display: none;
     cursor: pointer;
-    width  : auto;
+    width  : 15em;
     padding: 0.68em;
-    margin-top : 0.32em;
+    margin : 0.32em auto;
     color: red;
     border: 1px solid black;
 }
@@ -108,7 +133,7 @@
 
 .modal {
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     background: skyblue;
     position: fixed;
@@ -140,3 +165,20 @@
     font-weight: 600;
     background-color: rgba(36,51,77,.25);
  }
+
+ #commentArea{
+    background-color: rgba(36,51,77,.10);
+    padding: 1em;
+ }
+
+ #commentToggle{
+    font-weight: 600;
+ }
+
+ #commentText{
+    font-size: 11pt;
+ }
+
+.is-hidden{
+    display: none;
+}
